Alignment fixes

--- a/css/survey-style.css
+++ b/css/survey-style.css
@@ -90,12 +90,13 @@ a:hover {
 .front {
 	font-size: 0.7em;
 	line-height: 1.2em;
-	text-align: justify;
+	text-align: left;
 	}
 
 .mobile-front {
 	display: none;
 }
+
 
 .span4 h3 {
 	text-align: center;
@@ -213,7 +214,7 @@ ol li {
 		vertical-align: top;
     	padding: 60px 15px 0px 15px;
     	margin-bottom: 10px;
-    	line-height: 0.5em;
+    	line-height: 1em;
 	}
 
 	.row-fluid .span4 {
